Fix date placement too low

--- a/manager/static/infoskarm/style.css
+++ b/manager/static/infoskarm/style.css
@@ -82,6 +82,7 @@ body {
 
 #time {
 	font-size: 4em;
+	line-height: 1em;
 }
 
 #date {
